Let the browser compute the width of the header rather than giving it an explicit value to stop the header to overflow outside of the page.

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -66,7 +66,6 @@ div.long_col_dark {
 }
 
 div.header {
-  width: 100%;
   margin-bottom: 10px;
   background-color: black;
   padding: 5px;
